KAW-7947 Fix spacing

--- a/blocks/specification-table/specification-table.css
+++ b/blocks/specification-table/specification-table.css
@@ -1,7 +1,7 @@
 .specification-table.block {
   display: flex;
   flex-direction: column;
-  gap: 32px;
+  gap: 24px;
 }
 
 .specification-table p,
